Prevent text overflow in TextContainer. Reset Caret Position to beginning when status = notstarted.

--- a/src/Pages/Style.scss
+++ b/src/Pages/Style.scss
@@ -23,18 +23,28 @@
 
 .TypeTestContainer{
 
+        max-width: 1000px;
+        margin:auto;
+        padding-left: 30px;
+        padding-right: 30px;
+
+
     
     .TextContainer{
         // position: relative;
         // padding: 20px;
         background-color:#1e293b;
+        padding-left: 3px;
+        padding-right: 3px;
+
         // border-radius: 20px 20px 0px 0px;
         border-style: solid;
         border-color: #334155;
         // border-width: 1px;
-        // height: 150px;
-        width: 305px;
-        margin: auto;
+        height: 115px;
+        // width: 305px;
+        overflow: hidden;
+        // margin: auto;
         display: flex;
 
         position: relative;
